Translated text to spanish

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-shop" viewBox="0 0 16 16">
                       <path d="M2.97 1.35A1 1 0 0 1 3.73 1h8.54a1 1 0 0 1 .76.35l2.609 3.044A1.5 1.5 0 0 1 16 5.37v.255a2.375 2.375 0 0 1-4.25 1.458A2.37 2.37 0 0 1 9.875 8 2.37 2.37 0 0 1 8 7.083 2.37 2.37 0 0 1 6.125 8a2.37 2.37 0 0 1-1.875-.917A2.375 2.375 0 0 1 0 5.625V5.37a1.5 1.5 0 0 1 .361-.976zm1.78 4.275a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 1 0 2.75 0V5.37a.5.5 0 0 0-.12-.325L12.27 2H3.73L1.12 5.045A.5.5 0 0 0 1 5.37v.255a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0M1.5 8.5A.5.5 0 0 1 2 9v6h1v-5a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v5h6V9a.5.5 0 0 1 1 0v6h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1V9a.5.5 0 0 1 .5-.5M4 15h3v-5H4zm5-5a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1zm3 0h-2v3h2z"/>
                     </svg>
-                    Shop
+                    Tienda
                   </a>
                 </div>
               </div>
@@ -43,7 +43,7 @@
                       <path d="M4 5.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5m0 5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5M5 7a1 1 0 0 0 0 2h6a1 1 0 1 0 0-2z"/>
                       <path d="M0 4.5A1.5 1.5 0 0 1 1.5 3h13A1.5 1.5 0 0 1 16 4.5V6a.5.5 0 0 1-.5.5 1.5 1.5 0 0 0 0 3 .5.5 0 0 1 .5.5v1.5a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 11.5V10a.5.5 0 0 1 .5-.5 1.5 1.5 0 1 0 0-3A.5.5 0 0 1 0 6zM1.5 4a.5.5 0 0 0-.5.5v1.05a2.5 2.5 0 0 1 0 4.9v1.05a.5.5 0 0 0 .5.5h13a.5.5 0 0 0 .5-.5v-1.05a2.5 2.5 0 0 1 0-4.9V4.5a.5.5 0 0 0-.5-.5z"/>
                     </svg>
-                    Discount code
+                    Código de descuento
                   </a>
                 </div>
               </div>
@@ -55,7 +55,7 @@
                     <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-headset" viewBox="0 0 16 16">
                       <path d="M8 1a5 5 0 0 0-5 5v1h1a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V6a6 6 0 1 1 12 0v6a2.5 2.5 0 0 1-2.5 2.5H9.366a1 1 0 0 1-.866.5h-1a1 1 0 1 1 0-2h1a1 1 0 0 1 .866.5H11.5A1.5 1.5 0 0 0 13 12h-1a1 1 0 0 1-1-1V8a1 1 0 0 1 1-1h1V6a5 5 0 0 0-5-5"/>
                     </svg>
-                    Support
+                    Soporte
                   </a>
                 </div>
               </div>
@@ -365,44 +365,44 @@
           <div class="footer-container-info-box">
             <div class="footer-container-info-box-tab">
               <div class="footer-container-info-box-tab-title-subcontainer">
-                <h4>Company</h4>
+                <h4>Compañía</h4>
                 <hr class="footer-container-info-box-tab-title-subcontainer-hr" />
               </div>
               <div class="footer-container-info-box-tab-links-subcontainer">
-                <div class="box-tab-link"><a href="#">About us</a></div>
-                <div class="box-tab-link"><a href="#">Our services</a></div>
-                <div class="box-tab-link"><a href="#">Privacy policy</a></div>
-                <div class="box-tab-link"><a href="#">Affiliate program</a></div>
+                <div class="box-tab-link"><a href="#">Sobre nosotros</a></div>
+                <div class="box-tab-link"><a href="#">Nuestros servicios</a></div>
+                <div class="box-tab-link"><a href="#">Política de privacidad</a></div>
+                <div class="box-tab-link"><a href="#">Programa de afiliación</a></div>
               </div>
             </div>
             <div class="footer-container-info-box-tab">
               <div class="footer-container-info-box-tab-title-subcontainer">
-                <h4>Get Help</h4>
+                <h4>Ayuda</h4>
                 <hr class="footer-container-info-box-tab-title-subcontainer-hr" />
               </div>
               <div class="footer-container-info-box-tab-links-subcontainer">
-                <div class="box-tab-link"><a href="#">FAQ</a></div>
-                <div class="box-tab-link"><a href="#">Shipping</a></div>
-                <div class="box-tab-link"><a href="#">Returns</a></div>
-                <div class="box-tab-link"><a href="#">Order status</a></div>
-                <div class="box-tab-link"><a href="#">Payment options</a></div>
+                <div class="box-tab-link"><a href="#">Preguntas frecuentes</a></div>
+                <div class="box-tab-link"><a href="#">Envío</a></div>
+                <div class="box-tab-link"><a href="#">Devoluciones</a></div>
+                <div class="box-tab-link"><a href="#">Estado del pedido</a></div>
+                <div class="box-tab-link"><a href="#">Opciones de pago</a></div>
               </div>
             </div>
             <div class="footer-container-info-box-tab">
               <div class="footer-container-info-box-tab-title-subcontainer">
-                <h4>Online Shop</h4>
+                <h4>Tienda online</h4>
                 <hr class="footer-container-info-box-tab-title-subcontainer-hr" />
               </div>
               <div class="footer-container-info-box-tab-links-subcontainer">
-                <div class="box-tab-link"><a href="#">Sport Shoes</a></div>
-                <div class="box-tab-link"><a href="#">Dress Shoes</a></div>
-                <div class="box-tab-link"><a href="#">Casual Shoes</a></div>
-                <div class="box-tab-link"><a href="#">Boots</a></div>
+                <div class="box-tab-link"><a href="#">Deportivas</a></div>
+                <div class="box-tab-link"><a href="#">Zapatos de vestir</a></div>
+                <div class="box-tab-link"><a href="#">Zapatos casuales</a></div>
+                <div class="box-tab-link"><a href="#">Botas</a></div>
               </div>
             </div>
             <div class="footer-container-info-box-tab">
               <div class="footer-container-info-box-tab-title-subcontainer">
-                <h4>Follow Us</h4>
+                <h4>Síguenos</h4>
                 <hr class="footer-container-info-box-tab-title-subcontainer-hr" />
               </div>
               <div class="footer-container-social-media-box-tab-links-subcontainer">
