Translated input placeholder

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </svg>
               </div>
               <div class="header-container-searchBar-subcontainer-textInput">
-                <input type="text" name="searchBar_value" class="searchBar-textInput" placeholder="Search products..." id="searchBar-textInput">
+                <input type="text" name="searchBar_value" class="searchBar-textInput" placeholder="Buscar productos..." id="searchBar-textInput">
               </div>
             </div>
           </div>
