Integred all JS files

--- a/index.html
+++ b/index.html
@@ -443,6 +443,6 @@
     </div>
     <script type="module" src="/src/main.js"></script>
     <script type="module" src="/src/gsap-animations.js"></script>
-    <!-- <script type="module" src="/src/canvas-slide-three.js"></script> -->
+    <script type="module" src="/src/canvas-slide-three.js"></script>
   </body>
 </html>
